# BuildersMTY

./: .gitignore  .impeccable.md  README.md  audit.md  buildrs.pen  go.txt  hell.html  notisignup.html
building_docs/: course_platform.md
docs/: arquitectura.md  discord-bot.md  github-graphql.md  scoring.md  setup.md
marketing/: career-value.tsx  environment-frame.tsx  faq.tsx  footer.tsx  hero.tsx  how-it-works.tsx  manifesto.tsx  navbar.tsx  pricing-not-included.tsx  pricing-teaser.tsx  pricing-tiers.tsx  project-showcase.tsx  scroll-reveal.tsx  terminal-animation.tsx
src/auth_server/: Caddyfile  Dockerfile  sharkauth.yaml  start.sh
src/backend/: Procfile  pyproject.toml  railway.json
src/backend/migrations/: 001_builder_profiles.sql  002_add_contributed_repos.sql
src/backend/src/app/: README.md  bot.py  main.py
src/backend/src/app/routers/: auth.py
src/backend/src/app/schemas/: __init__.py  user.py
src/backend/src/app/services/: discord.py  github.py
src/backend/src/buildersmty_backend/: bot.py  main.py  start.py
src/backend/src/buildersmty_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backend/src/buildersmty_backend/db/: supabase.py
src/backend/src/buildersmty_backend/routers/: auth.py
src/backend/src/buildersmty_backend/schemas/: user.py
src/backend/src/buildersmty_backend/services/: discord.py  github.py  llm.py  scoring.py
src/backend/tests/: roblox.txt
src/frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
src/frontend/src/app/: globals.css  layout.tsx  (+1 more)
(+32 files in other folders)
